--- a/DungeonsAH Official Website/aboutus.html
+++ b/DungeonsAH Official Website/aboutus.html
@@ -27,7 +27,8 @@
         <ul>
           <li><a href="./index.html">Home</a></li>
           <li><a href="./aboutus.html">About Us</a></li>
-          <li><a href="./server.html">Server</a></li>
+          <li><a href="https://dungeonsah.tebex.io/">Store</a></li>
+          <li><a href="./staff.html">Staff</a></li>
           <li><a href="https://discord.gg/CHyhbtMFzz">Contact Us</a></li>
         </ul>
         <a href="https://discord.gg/CHyhbtMFzz" class="btn">Join us</a>
