--- a/DungeonsAH Official Website/index.html
+++ b/DungeonsAH Official Website/index.html
@@ -28,7 +28,7 @@
           <li><a href="./index.html">Home</a></li>
           <li><a href="./aboutus.html">About Us</a></li>
           <li><a href="https://dungeonsah.tebex.io/">Store</a></li>
-          <li><a href="./server.html">Server</a></li>
+          <li><a href="./staff.html">Staff</a></li>
           <li><a href="https://discord.gg/CHyhbtMFzz">Contact Us</a></li>
         </ul>
         <a href="https://discord.gg/CHyhbtMFzz" class="btn">Join us</a>
@@ -53,7 +53,7 @@
             can adventure inside custom dungeons and fight bosses never seen
             before!
           </p>
-          <button type="button">More soon</button>
+          <button type="button" href="./aboutus.html">More soon</button>
         </div>
       </div>
     </section>
